--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_URL="mongodb://localhost:27017/hng"
+# DB_URL="mongodb://localhost:27017/hng"
+DB_URL="mongodb+srv://jojo:speed123@learn.4i33ojx.mongodb.net/hng?retryWrites=true&w=majority"
 DEEPGRAM_KEY="c3ddc06bc3f52b61b39fa6da08c205acb1a99740"
