--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -x node main.js"
   },
+  "engines": {
+    "node": "^16.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jojothomas1515/hngx-video_saver_backend.git"
@@ -23,9 +26,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.1",
     "ffmpeg": "^0.0.4",
-    "mongoose": "^7.5.3",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^7.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
